kubernetes/002-chat-with-epi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-with-epi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat-with-epi
  template:
    metadata:
      labels:
        app: chat-with-epi
    spec:
      containers:
      - name: chat-with-epi
        image: gravitate-registry.cr.de-fra.ionos.com/chat-with-epi:latest
        imagePullPolicy: Always
      restartPolicy: Always
status: {}
