kubernetes/001-chat-with-epi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-with-epi
  labels:
    name: chat-with-epi
spec:
  selector:
    app: chat-with-epi
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
