kubernetes/003-chat-with-epi-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: chat-with-epi
spec:
  hosts:
  - "*"
  gateways:
  - gh-gateway
  http:
  - match:
    - uri:
        prefix: /chatbot/
    rewrite:
      uri: "/"
    route:
    - destination:
        host: chat-with-epi.default.svc.cluster.local
        port:
          number: 80
    corsPolicy:
      allowMethods:
      - GET
      - POST
      - OPTIONS
      allowOrigins:
      - exact: "*"
      allowHeaders:
      - "content-type"
      - "Accept"
